base/07-sg.tf
##############################
#                            #
#        Loadbalancer        #
#                            #
##############################

resource "aws_security_group" "lb_sg" {
  name        = "lb-sg"
  description = "HTTP public vers le load balancer"
  vpc_id      = aws_vpc.kevin_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "lb-sg"
  }
}

##############################
#                            #
#        BASTION SSH         #
#                            #
##############################

resource "aws_security_group" "bastion_sg" {
  name        = "bastion-sg"
  description = "SSH public vers le bastion"
  vpc_id      = aws_vpc.kevin_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "bastion-sg"
  }
}

##############################
#                            #
#            WEB             #
#                            #
##############################

resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  description = "HTTP depuis le LB, SSH depuis le bastion"
  vpc_id      = aws_vpc.kevin_vpc.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.lb_sg.id]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web-sg"
  }
}
